tests/semantic/type_system1/type_system1.err
Error: Symbol constant (type mismatch) in file type_system1.dl at line 34
NumberRelation("1").                   // error
---------------^--------------------------------
Error: Null constant used as a non-record in file type_system1.dl at line 35
NumberRelation(nil).                   // error
---------------^--------------------------------
Error: Number constant (type mismatch) in file type_system1.dl at line 37
NumberRelation([1]).                   // error
----------------^-------------------------------
Error: Number constant (type mismatch) in file type_system1.dl at line 38
NumberRelation([-1]).                  // error
-----------------^------------------------------
Error: Non-numeric use for numeric functor in file type_system1.dl at line 39
NumberRelation([1+1]).                 // error
----------------^-------------------------------
Error: Number constant (type mismatch) in file type_system1.dl at line 41
NumberRelation([1, 1]).                // error
----------------^-------------------------------
Error: Number constant (type mismatch) in file type_system1.dl at line 41
NumberRelation([1, 1]).                // error
-------------------^----------------------------
Error: Number constant (type mismatch) in file type_system1.dl at line 42
NumberRelation([-1, -1]).              // error
-----------------^------------------------------
Error: Number constant (type mismatch) in file type_system1.dl at line 42
NumberRelation([-1, -1]).              // error
---------------------^--------------------------
Error: Non-numeric use for numeric functor in file type_system1.dl at line 43
NumberRelation([1+1, 1+1]).            // error
----------------^-------------------------------
Error: Non-numeric use for numeric functor in file type_system1.dl at line 43
NumberRelation([1+1, 1+1]).            // error
---------------------^--------------------------
Error: Number constant (type mismatch) in file type_system1.dl at line 45
NumberRelation([1, 1, 1]).             // error
----------------^-------------------------------
Error: Number constant (type mismatch) in file type_system1.dl at line 45
NumberRelation([1, 1, 1]).             // error
-------------------^----------------------------
Error: Number constant (type mismatch) in file type_system1.dl at line 45
NumberRelation([1, 1, 1]).             // error
----------------------^-------------------------
Error: Number constant (type mismatch) in file type_system1.dl at line 46
NumberRelation([-1, -1, -1]).          // error
-----------------^------------------------------
Error: Number constant (type mismatch) in file type_system1.dl at line 46
NumberRelation([-1, -1, -1]).          // error
---------------------^--------------------------
Error: Number constant (type mismatch) in file type_system1.dl at line 46
NumberRelation([-1, -1, -1]).          // error
-------------------------^----------------------
Error: Non-numeric use for numeric functor in file type_system1.dl at line 47
NumberRelation([1+1, 1+1, 1+1]).       // error
----------------^-------------------------------
Error: Non-numeric use for numeric functor in file type_system1.dl at line 47
NumberRelation([1+1, 1+1, 1+1]).       // error
---------------------^--------------------------
Error: Non-numeric use for numeric functor in file type_system1.dl at line 47
NumberRelation([1+1, 1+1, 1+1]).       // error
--------------------------^---------------------
Error: Symbol constant (type mismatch) in file type_system1.dl at line 49
NumberRelation(["1"]).                 // error
----------------^-------------------------------
Error: Symbol constant (type mismatch) in file type_system1.dl at line 50
NumberRelation(["1", "1"]).            // error
----------------^-------------------------------
Error: Symbol constant (type mismatch) in file type_system1.dl at line 50
NumberRelation(["1", "1"]).            // error
---------------------^--------------------------
Error: Symbol constant (type mismatch) in file type_system1.dl at line 51
NumberRelation(["1", "1", "1"]).       // error
----------------^-------------------------------
Error: Symbol constant (type mismatch) in file type_system1.dl at line 51
NumberRelation(["1", "1", "1"]).       // error
---------------------^--------------------------
Error: Symbol constant (type mismatch) in file type_system1.dl at line 51
NumberRelation(["1", "1", "1"]).       // error
--------------------------^---------------------
Error: Number constant (type mismatch) in file type_system1.dl at line 55
SymbolRelation(0).                     // error
---------------^--------------------------------
Error: Number constant (type mismatch) in file type_system1.dl at line 56
SymbolRelation(1).                     // error
---------------^--------------------------------
Error: Number constant (type mismatch) in file type_system1.dl at line 57
SymbolRelation(-1).                    // error
----------------^-------------------------------
Error: Non-numeric use for numeric functor in file type_system1.dl at line 58
SymbolRelation(1+1).                   // error
---------------^--------------------------------
Error: Null constant used as a non-record in file type_system1.dl at line 60
SymbolRelation(nil).                   // error
---------------^--------------------------------
Error: Number constant (type mismatch) in file type_system1.dl at line 62
SymbolRelation([1]).                   // error
----------------^-------------------------------
Error: Number constant (type mismatch) in file type_system1.dl at line 63
SymbolRelation([-1]).                  // error
-----------------^------------------------------
Error: Non-numeric use for numeric functor in file type_system1.dl at line 64
SymbolRelation([1+1]).                 // error
----------------^-------------------------------
Error: Number constant (type mismatch) in file type_system1.dl at line 66
SymbolRelation([1, 1]).                // error
----------------^-------------------------------
Error: Number constant (type mismatch) in file type_system1.dl at line 66
SymbolRelation([1, 1]).                // error
-------------------^----------------------------
Error: Number constant (type mismatch) in file type_system1.dl at line 67
SymbolRelation([-1, -1]).              // error
-----------------^------------------------------
Error: Number constant (type mismatch) in file type_system1.dl at line 67
SymbolRelation([-1, -1]).              // error
---------------------^--------------------------
Error: Non-numeric use for numeric functor in file type_system1.dl at line 68
SymbolRelation([1+1, 1+1]).            // error
----------------^-------------------------------
Error: Non-numeric use for numeric functor in file type_system1.dl at line 68
SymbolRelation([1+1, 1+1]).            // error
---------------------^--------------------------
Error: Number constant (type mismatch) in file type_system1.dl at line 70
SymbolRelation([1, 1, 1]).             // error
----------------^-------------------------------
Error: Number constant (type mismatch) in file type_system1.dl at line 70
SymbolRelation([1, 1, 1]).             // error
-------------------^----------------------------
Error: Number constant (type mismatch) in file type_system1.dl at line 70
SymbolRelation([1, 1, 1]).             // error
----------------------^-------------------------
Error: Number constant (type mismatch) in file type_system1.dl at line 71
SymbolRelation([-1, -1, -1]).          // error
-----------------^------------------------------
Error: Number constant (type mismatch) in file type_system1.dl at line 71
SymbolRelation([-1, -1, -1]).          // error
---------------------^--------------------------
Error: Number constant (type mismatch) in file type_system1.dl at line 71
SymbolRelation([-1, -1, -1]).          // error
-------------------------^----------------------
Error: Non-numeric use for numeric functor in file type_system1.dl at line 72
SymbolRelation([1+1, 1+1, 1+1]).       // error
----------------^-------------------------------
Error: Non-numeric use for numeric functor in file type_system1.dl at line 72
SymbolRelation([1+1, 1+1, 1+1]).       // error
---------------------^--------------------------
Error: Non-numeric use for numeric functor in file type_system1.dl at line 72
SymbolRelation([1+1, 1+1, 1+1]).       // error
--------------------------^---------------------
Error: Symbol constant (type mismatch) in file type_system1.dl at line 74
SymbolRelation(["1"]).                 // error
----------------^-------------------------------
Error: Symbol constant (type mismatch) in file type_system1.dl at line 75
SymbolRelation(["1", "1"]).            // error
----------------^-------------------------------
Error: Symbol constant (type mismatch) in file type_system1.dl at line 75
SymbolRelation(["1", "1"]).            // error
---------------------^--------------------------
Error: Symbol constant (type mismatch) in file type_system1.dl at line 76
SymbolRelation(["1", "1", "1"]).       // error
----------------^-------------------------------
Error: Symbol constant (type mismatch) in file type_system1.dl at line 76
SymbolRelation(["1", "1", "1"]).       // error
---------------------^--------------------------
Error: Symbol constant (type mismatch) in file type_system1.dl at line 76
SymbolRelation(["1", "1", "1"]).       // error
--------------------------^---------------------
Error: Number constant (type mismatch) in file type_system1.dl at line 80
SingleNumberRelation(0).               // error
---------------------^--------------------------
Error: Number constant (type mismatch) in file type_system1.dl at line 81
SingleNumberRelation(1).               // error
---------------------^--------------------------
Error: Number constant (type mismatch) in file type_system1.dl at line 82
SingleNumberRelation(-1).              // error
----------------------^-------------------------
Error: Non-numeric use for numeric functor in file type_system1.dl at line 83
SingleNumberRelation(1+1).             // error
---------------------^--------------------------
Error: Symbol constant (type mismatch) in file type_system1.dl at line 84
SingleNumberRelation("1").             // error
---------------------^--------------------------
Error: Symbol constant (type mismatch) in file type_system1.dl at line 89
SingleNumberRelation(["1"]).           // error
----------------------^-------------------------
Error: Number constant (type mismatch) in file type_system1.dl at line 94
DoubleNumberRelation(0).               // error
---------------------^--------------------------
Error: Number constant (type mismatch) in file type_system1.dl at line 95
DoubleNumberRelation(1).               // error
---------------------^--------------------------
Error: Number constant (type mismatch) in file type_system1.dl at line 96
DoubleNumberRelation(-1).              // error
----------------------^-------------------------
Error: Non-numeric use for numeric functor in file type_system1.dl at line 97
DoubleNumberRelation(1+1).             // error
---------------------^--------------------------
Error: Symbol constant (type mismatch) in file type_system1.dl at line 98
DoubleNumberRelation("1").             // error
---------------------^--------------------------
Error: Symbol constant (type mismatch) in file type_system1.dl at line 103
DoubleNumberRelation(["1", "1"]).      // error
----------------------^-------------------------
Error: Symbol constant (type mismatch) in file type_system1.dl at line 103
DoubleNumberRelation(["1", "1"]).      // error
---------------------------^--------------------
Error: Number constant (type mismatch) in file type_system1.dl at line 107
TripleNumberRelation(0).               // error
---------------------^--------------------------
Error: Number constant (type mismatch) in file type_system1.dl at line 108
TripleNumberRelation(1).               // error
---------------------^--------------------------
Error: Number constant (type mismatch) in file type_system1.dl at line 109
TripleNumberRelation(-1).              // error
----------------------^-------------------------
Error: Non-numeric use for numeric functor in file type_system1.dl at line 110
TripleNumberRelation(1+1).             // error
---------------------^--------------------------
Error: Symbol constant (type mismatch) in file type_system1.dl at line 111
TripleNumberRelation("1").             // error
---------------------^--------------------------
Error: Symbol constant (type mismatch) in file type_system1.dl at line 116
TripleNumberRelation(["1", "1", "1"]). // error
----------------------^-------------------------
Error: Symbol constant (type mismatch) in file type_system1.dl at line 116
TripleNumberRelation(["1", "1", "1"]). // error
---------------------------^--------------------
Error: Symbol constant (type mismatch) in file type_system1.dl at line 116
TripleNumberRelation(["1", "1", "1"]). // error
--------------------------------^---------------
Error: Number constant (type mismatch) in file type_system1.dl at line 120
SingleSymbolRelation(0).               // error
---------------------^--------------------------
Error: Number constant (type mismatch) in file type_system1.dl at line 121
SingleSymbolRelation(1).               // error
---------------------^--------------------------
Error: Number constant (type mismatch) in file type_system1.dl at line 122
SingleSymbolRelation(-1).              // error
----------------------^-------------------------
Error: Non-numeric use for numeric functor in file type_system1.dl at line 123
SingleSymbolRelation(1+1).             // error
---------------------^--------------------------
Error: Symbol constant (type mismatch) in file type_system1.dl at line 124
SingleSymbolRelation("1").             // error
---------------------^--------------------------
Error: Number constant (type mismatch) in file type_system1.dl at line 126
SingleSymbolRelation([1]).             // error
----------------------^-------------------------
Error: Number constant (type mismatch) in file type_system1.dl at line 127
SingleSymbolRelation([-1]).            // error
-----------------------^------------------------
Error: Non-numeric use for numeric functor in file type_system1.dl at line 128
SingleSymbolRelation([1+1]).           // error
----------------------^-------------------------
Error: Number constant (type mismatch) in file type_system1.dl at line 133
DoubleSymbolRelation(0).               // error
---------------------^--------------------------
Error: Number constant (type mismatch) in file type_system1.dl at line 134
DoubleSymbolRelation(1).               // error
---------------------^--------------------------
Error: Number constant (type mismatch) in file type_system1.dl at line 135
DoubleSymbolRelation(-1).              // error
----------------------^-------------------------
Error: Non-numeric use for numeric functor in file type_system1.dl at line 136
DoubleSymbolRelation(1+1).             // error
---------------------^--------------------------
Error: Symbol constant (type mismatch) in file type_system1.dl at line 137
DoubleSymbolRelation("1").             // error
---------------------^--------------------------
Error: Number constant (type mismatch) in file type_system1.dl at line 139
DoubleSymbolRelation([1, 1]).          // error
----------------------^-------------------------
Error: Number constant (type mismatch) in file type_system1.dl at line 139
DoubleSymbolRelation([1, 1]).          // error
-------------------------^----------------------
Error: Number constant (type mismatch) in file type_system1.dl at line 140
DoubleSymbolRelation([-1, -1]).        // error
-----------------------^------------------------
Error: Number constant (type mismatch) in file type_system1.dl at line 140
DoubleSymbolRelation([-1, -1]).        // error
---------------------------^--------------------
Error: Non-numeric use for numeric functor in file type_system1.dl at line 141
DoubleSymbolRelation([1+1, 1+1]).      // error
----------------------^-------------------------
Error: Non-numeric use for numeric functor in file type_system1.dl at line 141
DoubleSymbolRelation([1+1, 1+1]).      // error
---------------------------^--------------------
Error: Number constant (type mismatch) in file type_system1.dl at line 146
TripleSymbolRelation(0).               // error
---------------------^--------------------------
Error: Number constant (type mismatch) in file type_system1.dl at line 147
TripleSymbolRelation(1).               // error
---------------------^--------------------------
Error: Number constant (type mismatch) in file type_system1.dl at line 148
TripleSymbolRelation(-1).              // error
----------------------^-------------------------
Error: Non-numeric use for numeric functor in file type_system1.dl at line 149
TripleSymbolRelation(1+1).             // error
---------------------^--------------------------
Error: Symbol constant (type mismatch) in file type_system1.dl at line 150
TripleSymbolRelation("1").             // error
---------------------^--------------------------
Error: Number constant (type mismatch) in file type_system1.dl at line 152
TripleSymbolRelation([1, 1, 1]).       // error
----------------------^-------------------------
Error: Number constant (type mismatch) in file type_system1.dl at line 152
TripleSymbolRelation([1, 1, 1]).       // error
-------------------------^----------------------
Error: Number constant (type mismatch) in file type_system1.dl at line 152
TripleSymbolRelation([1, 1, 1]).       // error
----------------------------^-------------------
Error: Number constant (type mismatch) in file type_system1.dl at line 153
TripleSymbolRelation([-1, -1, -1]).    // error
-----------------------^------------------------
Error: Number constant (type mismatch) in file type_system1.dl at line 153
TripleSymbolRelation([-1, -1, -1]).    // error
---------------------------^--------------------
Error: Number constant (type mismatch) in file type_system1.dl at line 153
TripleSymbolRelation([-1, -1, -1]).    // error
-------------------------------^----------------
Error: Non-numeric use for numeric functor in file type_system1.dl at line 154
TripleSymbolRelation([1+1, 1+1, 1+1]). // error
----------------------^-------------------------
Error: Non-numeric use for numeric functor in file type_system1.dl at line 154
TripleSymbolRelation([1+1, 1+1, 1+1]). // error
---------------------------^--------------------
Error: Non-numeric use for numeric functor in file type_system1.dl at line 154
TripleSymbolRelation([1+1, 1+1, 1+1]). // error
--------------------------------^---------------
109 errors generated, evaluation aborted
